@@ -322,7 +322,7 @@ public:
         m_msgEnIdx = singleton().msgEnSetBit(m_msgEnIdx, code, flag);
     }
     void warnOff(V3ErrorCode code, bool flag) { warnOn(code, !flag); }
-    bool warnOff(const string& msg, bool flag);  // Returns 1 if ok
+    string warnOffParse(const string& msgs, bool flag);  // Returns "" if ok
     bool warnIsOff(V3ErrorCode code) const VL_MT_SAFE;
     void warnLintOff(bool flag);
     void warnStyleOff(bool flag);
@@ -350,8 +350,8 @@ public:
     static void globalWarnOff(V3ErrorCode code, bool flag) {
         defaultFileLine().warnOff(code, flag);
     }
-    static bool globalWarnOff(const string& code, bool flag) {
-        return defaultFileLine().warnOff(code, flag);
+    static string globalWarnOffParse(const string& msgs, bool flag) {
+        return defaultFileLine().warnOffParse(msgs, flag);
     }
     static void fileNameNumMapDumpXml(std::ostream& os) { singleton().fileNameNumMapDumpXml(os); }
     static void fileNameNumMapDumpJson(std::ostream& os) {
