@@ -46,12 +46,7 @@
 //END_MODULE_NAME--------------------------------------------------------------
 
 //See also: https://github.com/twosigma/verilator_support
-// verilator lint_off COMBDLY
-// verilator lint_off INITIALDLY
-// verilator lint_off MULTIDRIVEN
-// verilator lint_off UNSIGNED
-// verilator lint_off WIDTH
-// verilator lint_off LATCH
+// verilator lint_off COMBDLY,INITIALDLY,LATCH,MULTIDRIVEN,UNSIGNED,WIDTH
 
 // BEGINNING OF MODULE
 `timescale 1 ps / 1 ps
